# conan-recipes

./: .gitignore  clean.sh  create.sh  export.sh
libcutl/all/: CMakeLists.txt  conandata.yml  conanfile.py
libcutl/all/cmake/: libcutl.cmake  libcutl_autotools.cmake
libcutl/all/patches/: 0001-templating.patch  conan_packages.patch  templates.patch
libxsd-frontend/all/: CMakeLists.txt  conandata.yml  conanfile.py
libxsd-frontend/all/cmake/: libxsd-frontend.cmake  libxsd-frontend_autotools.cmake
libxsd-frontend/all/patches/: 0001-abstract_p.patch  0001-templating.patch  0002-fix-increasing-end-ptrs.patch  0002-windows-strings.patch
xsd/: config.yml
xsd/all/: CMakeLists.txt  conandata.yml  conanfile.py
xsd/all/cmake/: xsd.cmake  xsd_configure.cmake
xsd/all/patches/: 0001-cutl-from-conan.patch  0001-templating.patch  0002-libxsd-frontend-from-conan.patch  0003-autoconfigure.patch  0004-abstract_p.patch
xsd/all/test_package/: .gitignore  conanfile.py
